[package]
name = "ccid-tools"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/7ka-Hiira/ccid-tools"
description = "A Concurrent CCID management tool"
license = "Apache-2.0"
authors = ["Nanaka Hiira"]
keywords = ["concurrent", "ccid", "vanity", "brute-force"]
categories = ["cryptography", "command-line-utilities", "concurrency"]

[dependencies]
bech32 = "0.11.0"
clap = { version = "4.5.0", features = ["derive"] }
coins-bip32 = "0.8.7"
coins-bip39 = "0.8.7"
hex = "0.4.3"
k256 = "0.13.3"
num_cpus = "1.16.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.3"
ripemd = "0.1.3"
secp256k1 = "0.29.0"
sha2 = "0.10.8"
unicode-normalization = "0.1.22"

[profile.release]
lto = "fat"
opt-level = 3
